correctly update autocomplete input data on table change, fix autocomplete input overflow

--- a/src/app/components/util/autocomplete-with-add-function/autocomplete-with-add-function.component.scss
+++ b/src/app/components/util/autocomplete-with-add-function/autocomplete-with-add-function.component.scss
@@ -6,3 +6,10 @@
 mat-form-field {
   width: 100%;
 }
+
+mat-option {
+  height: auto !important;
+  line-height: normal !important;
+  padding: 8px 16px !important;
+  white-space: initial;
+}
